# python_class_scrapper

./: .env  .gitignore  README.md  main.py  main_async.py  pyproject.toml
src/managers/: __init__.py  scrapper_manager.py
src/services/: __init__.py  info_service.py  math_service.py
src/utils/: __init__.py  settings.py
tests/: __init__.py  test_info_service.py  test_integration.py
